# Blender-Launcher-V2

./: .bazelrc  .gitignore  404.html  BUILD.bazel  MODULE.bazel  Makefile  Pipfile  README.md  build_style.py  dockerfile  index.html  pyproject.toml  requirements.in  requirements.txt  requirements_lock.txt  run.ps1  version.txt  zip_linux.sh
.github/: dependabot.yml
.github/workflows/: api_cache_update.yml  build.yml  docs.yml  (+9 more)
FAQ/: index.html
bazel/: qt.bzl
blender_forks/: index.html
build_initialization/: index.html
development/: index.html
docs/: mkdocs.yml  zensical.toml
extras/: Blender Launcher.ini  blenderlauncher.desktop
feature_request/: index.html
file_association/: index.html
flatpak-files/: build-and-install.sh  generate_flatpak_modules.py  io.github.Victor_IX.Blender-Launcher-V2.desktop  io.github.Victor_IX.Blender-Launcher-V2.metainfo.xml  io.github.Victor_IX.Blender-Launcher-V2.yml  python3-modules.yaml
github_token/: index.html
implementing_new_fork/: index.html
installation/: index.html
known_issues/: index.html
library_folder/: index.html
localization/: index.html
manual_build_installation/: index.html
project.inlang/: settings.json
scripts/: build_linux.sh  build_linux_debug.sh  build_mac.sh  build_ubuntu_via_docker.sh  build_win.bat  build_win_debug.bat  bump_version.py  generate_flatpak_modules.py  mkdocs_serve.bat  mkdocs_serve.sh  set_default_settings.py  update_cache_api.py
search/: search_index.json
settings/: index.html
source/: main.py
tests/: conftest.py
tools/: BUILD  generate_resources.py  rcc.py
troubleshooting/: index.html
user_interface/: index.html
(+176 files in other folders)
